[metadata]
name=trongPackage
download_url=https://github.com/minhng-info/blank/tarball/master
description=A blank / template for creating a new Python package
long_description=file:README.md
long_description_content_type=text/markdown
author=minhng-info
author_email=minhng92@gmail.com
maintainer=minhng-info
maintainer_email=minhng92@gmail.com
url=https://github.com/trongbui1105/Package.git
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation

[options]
packages=
    trongPackage
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
#install_requires=
#    <your-dependency-lib-1>
#    <your-dependency-lib-2>

[options.entry_points]
console_scripts =
    hello_trongPackage = trongPackage.main:say_hello

[bdist_wheel]
universal=1